--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start:dev": "webpack-dev-server"
+    "start:dev": "webpack-dev-server --host 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@reduxjs/toolkit": "^1.4.0",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
     "@types/webpack": "^4.41.21",
+    "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -25,6 +28,7 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/ramda": "^0.27.14",
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
@@ -34,6 +38,7 @@
     "eslint": "^7.6.0",
     "eslint-plugin-react": "^7.20.6",
     "html-webpack-plugin": "^4.3.0",
+    "node-fetch": "^2.6.0",
     "react-dev-utils": "^10.2.1",
     "source-map-loader": "^1.0.1",
     "style-loader": "^1.2.1",
